# LOK.AI

backend/: alembic.ini  create_db.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 6eb1bdf13bcf_initial_migration.py  f894e5e1f835_add_documents_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py  auth.py  documents.py  quizzes.py  summary.py
backend/app/core/: config.py  security.py
backend/app/models/: document.py  user.py
backend/app/schemas/: __init__.py  document.py  user.py
backend/src/backend/: config.py  main.py
backend/src/backend/model/: mixins.py  person.py  role.py  user_role.py  users.py
frontend/: command.txt  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/auth/: ForgotPassword.jsx  Login.jsx  Register.jsx
frontend/src/components/chapters/: ChapterCard.jsx
frontend/src/components/dashboard/: ActivityFeed.jsx  ProgressChart.jsx  StatsCard.jsx
frontend/src/components/modals/: QuizCustomizationModal.jsx
frontend/src/components/ui/: Badge.jsx  Button.jsx  Card.jsx  Input.jsx  Skeleton.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  DocumentDetail.jsx  Documents.jsx  Home.jsx  Quiz.jsx  Quizzes.jsx
frontend/src/services/: auth.js  chapters.js  documents.js  quizzes.js
